connecting the js files

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -11,10 +11,11 @@
         <form>
             <div class="form-group mt-4 d-flex">
                 <input type="email" class="form-control mr-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Search username ...">
-                <button type="submit" class="btn">Search</button>
+                <button type="submit" class="btn" id="search">Search</button>
             </div>
         </form>
         <div id="contents"></div>
     </div>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
