getting data from github api

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <form>
             <div class="form-group mt-4 d-flex">
-                <input type="email" class="form-control mr-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Search username ...">
+                <input type="text" class="form-control mr-3" id="keyword" placeholder="Search username ...">
                 <button type="submit" class="btn" id="search">Search</button>
             </div>
         </form>
