getting number of repositories & structure files update

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -14,7 +14,10 @@
                 <button type="submit" class="btn" id="search">Search</button>
             </div>
         </form>
-        <div id="contents"></div>
+        <div>
+            <div id="usersInfoContainer"></div>
+            <div id="repositoriesContainer"></div>
+        </div>
     </div>
     <script type="module" src="js/index.js"></script>
 </body>
