--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marfeel Test</title>
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
@@ -11,12 +12,12 @@
         <form>
             <div class="form-group mt-4 d-flex">
                 <input type="text" class="form-control mr-3" id="keyword" placeholder="Search username ...">
-                <button type="submit" class="btn" id="search">Search</button>
+                <button type="submit" class="btn" id="btn-search">Search</button>
             </div>
         </form>
-        <div>
-            <div id="usersInfoContainer"></div>
-            <div id="repositoriesContainer"></div>
+        <div id="content">
+            <div id="users-content-container" class="users-content-container"></div>
+            <div id="repositories-container"></div>
         </div>
     </div>
     <script type="module" src="js/index.js"></script>
