--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marfeel Test</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
@@ -17,7 +17,7 @@
         </form>
         <div id="content">
             <div id="users-content-container" class="users-content-container"></div>
-            <div id="repositories-container"></div>
+            <div id="repos-container"></div>
         </div>
     </div>
     <script type="module" src="js/index.js"></script>
