--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,22 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marfeel Test</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
-        <form>
-            <div class="form-group mt-4 d-flex">
-                <input type="text" class="form-control mr-3" id="keyword" placeholder="Search username ...">
-                <button type="submit" class="btn" id="btn-search">Search</button>
-            </div>
+        <form class="form-group mt-4 d-flex">
+            <input type="text" class="form-control mr-3" id="keyword" placeholder="Search username ..." required>
+            <input type="submit" class="btn" id="btn-search" value="Search">
         </form>
-        <div id="content">
-            <div id="users-content-container" class="users-content-container"></div>
-            <div id="repos-container"></div>
-        </div>
+        <div id="content"></div>
     </div>
-    <script type="module" src="js/index.js"></script>
 </body>
 </html>
